<!--
  ~ Copyright 2019 Dmitriy Ponomarenko
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
	<string name="app_name">Airy Compass</string>

	<string name="acceleration">acceleration</string>
	<string name="orientation">orientation</string>
	<string name="settings">Settings</string>
	<string name="rate_app">Rate app</string>
	<string name="keep_screen_on">Keep screen ON</string>
	<string name="simple_mode">Simple mode</string>
	<string name="energy_saving">Energy saving mode</string>
	<string name="warning">Warning!</string>
	<string name="error">Error</string>
	<string name="unable_to_init_sensor">Unable to initialize sensors for Compass.</string>
	<string name="request">Request or feedback</string>
	<string name="email_clients_not_found">Not found any Email client</string>
	<string name="send_email">Send by email&#8230;</string>
	<string name="advanced">Advanced settings</string>
	<string name="show_acceleration">Show Acceleration</string>
	<string name="show_orientation">Show Orientation</string>
	<string name="show_accuracy">Show Accuracy</string>
	<string name="show_magnetic">Show Magnetic field</string>

	<string name="btn_ok">OK</string>
	<string name="btn_save">Save</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_yes">Yes</string>
	<string name="btn_no">No</string>

	<string name="n">N</string>
	<string name="e">E</string>
	<string name="s">S</string>
	<string name="w">W</string>
	<string name="ne">NE</string>
	<string name="se">SE</string>
	<string name="sw">SW</string>
	<string name="nw">NW</string>
	<string name="mt_val">μT</string>
	<string name="mag_field">mag.field</string>
	<string name="magnetic_field">Magnetic field</string>
	<string name="magnetic_field2">Magnetic field: %d %s</string>
	<string name="accuracy">accuracy</string>
	<string name="accuracy2">Accuracy</string>
	<string name="accuracy3">Accuracy: %s</string>

	<string name="accuracy_unreliable">unreliable</string>
	<string name="accuracy_low">low</string>
	<string name="accuracy_medium">medium</string>
	<string name="accuracy_high">high</string>
	<string name="need_calibration">The compass needs to be calibrated.\n Sweep it through a figure eight pattern until the calibration is complete</string>

	<!-- Shown in the 'About' window of the app. -->
	<string name="about_body"><![CDATA[
    	<b>Airy Compass 2019</b><br>
		Version %s
	]]></string>
	<!--<a href="http://#/">Application site</a>-->

	<string-array name="theme_colors">
		<item>Theme Indigo</item>
		<item>Theme Black</item>
		<item>Theme Grey</item>
		<item>Theme Brown</item>
		<item>Theme Green</item>
		<item>Theme Red</item>
		<item>Theme Pink</item>
		<item>Theme Purple</item>
	</string-array>
</resources>
