<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2019 Dmitriy Ponomarenko
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<ImageButton
					android:id="@+id/btn_back"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="start"
					android:background="?android:selectableItemBackground"
					android:contentDescription="@null"
					android:padding="@dimen/spacing_normal"
					android:src="@drawable/ic_arrow_back"/>

			<TextView
					style="@style/Text.SectionLabel"
					android:layout_width="wrap_content"
					android:layout_height="@dimen/toolbar_height"
					android:gravity="center_vertical"
					android:paddingStart="@dimen/spacing_normal"
					android:paddingLeft="@dimen/spacing_normal"
					android:paddingEnd="@dimen/spacing_normal"
					android:paddingRight="@dimen/spacing_normal"
					android:text="@string/settings"
					/>

		</LinearLayout>

		<Spinner
				android:id="@+id/themeColor"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="@dimen/spacing_zero"
				android:paddingLeft="@dimen/spacing_zero"
				android:paddingEnd="1dp"
				android:paddingRight="1dp"/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@null"
					android:padding="@dimen/spacing_normal"
					android:src="@drawable/ic_lightbulb_on"
					/>

			<TextView
					style="@style/Text.NormalLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/spacing_normal"
					android:layout_marginLeft="@dimen/spacing_normal"
					android:layout_marginTop="@dimen/spacing_normal"
					android:layout_marginEnd="@dimen/spacing_normal"
					android:layout_marginRight="@dimen/spacing_normal"
					android:layout_marginBottom="@dimen/spacing_normal"
					android:layout_weight="1"
					android:drawablePadding="@dimen/spacing_double"
					android:text="@string/keep_screen_on"
					/>

			<Switch
					android:id="@+id/swKeepScreenOn"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="top"
					android:layout_margin="@dimen/spacing_normal"
					/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@null"
					android:padding="@dimen/spacing_normal"
					android:src="@drawable/ic_compass"
					/>

			<TextView
					style="@style/Text.NormalLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/spacing_normal"
					android:layout_marginLeft="@dimen/spacing_normal"
					android:layout_marginTop="@dimen/spacing_normal"
					android:layout_marginEnd="@dimen/spacing_normal"
					android:layout_marginRight="@dimen/spacing_normal"
					android:layout_marginBottom="@dimen/spacing_normal"
					android:layout_weight="1"
					android:drawablePadding="@dimen/spacing_double"
					android:text="@string/simple_mode"
					/>

			<Switch
					android:id="@+id/swSimpleMode"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="top"
					android:layout_margin="@dimen/spacing_normal"
					/>
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@null"
					android:padding="@dimen/spacing_normal"
					android:src="@drawable/ic_battery_charging"
					/>

			<TextView
					style="@style/Text.NormalLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/spacing_normal"
					android:layout_marginLeft="@dimen/spacing_normal"
					android:layout_marginTop="@dimen/spacing_normal"
					android:layout_marginEnd="@dimen/spacing_normal"
					android:layout_marginRight="@dimen/spacing_normal"
					android:layout_marginBottom="@dimen/spacing_normal"
					android:layout_weight="1"
					android:drawablePadding="@dimen/spacing_double"
					android:text="@string/energy_saving"
					/>

			<Switch
					android:id="@+id/swEnergySaving"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="top"
					android:layout_margin="@dimen/spacing_normal"
					/>
		</LinearLayout>

		<LinearLayout
				android:id="@+id/btnRate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?android:selectableItemBackground"
				android:focusable="true"
				android:clickable="true"
				android:orientation="horizontal">

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@null"
					android:padding="@dimen/spacing_normal"
					android:src="@drawable/ic_thumbs"
					/>

			<TextView
					style="@style/Text.NormalLabel"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawablePadding="@dimen/spacing_double"
					android:padding="@dimen/spacing_normal"
					android:text="@string/rate_app"
					/>
		</LinearLayout>

		<LinearLayout
				android:id="@+id/btnRequest"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?android:selectableItemBackground"
				android:focusable="true"
				android:clickable="true"
				android:orientation="horizontal">

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription="@null"
					android:padding="@dimen/spacing_normal"
					android:src="@drawable/ic_chat_bubble"
					/>

			<TextView
					style="@style/Text.NormalLabel"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawablePadding="@dimen/spacing_double"
					android:padding="@dimen/spacing_normal"
					android:text="@string/request"
					/>
		</LinearLayout>

		<LinearLayout
				android:id="@+id/pnlAdvanced"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?android:selectableItemBackground"
				android:clickable="true"
				android:focusable="true"
				android:orientation="horizontal">

			<TextView
					style="@style/Text.NormalLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:drawablePadding="@dimen/spacing_double"
					android:gravity="end"
					android:padding="@dimen/spacing_normal"
					android:text="@string/advanced"
					/>

			<ImageView
					android:id="@+id/imgAdvanced"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/spacing_normal"
					android:contentDescription="@string/advanced"
					android:src="@drawable/ic_expand_more"/>
		</LinearLayout>

		<LinearLayout
				android:id="@+id/pnlAcceleration"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<TextView
					style="@style/Text.NormalLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/spacing_huge"
					android:layout_marginLeft="@dimen/spacing_huge"
					android:layout_marginTop="@dimen/spacing_small"
					android:layout_marginEnd="@dimen/spacing_normal"
					android:layout_marginRight="@dimen/spacing_normal"
					android:layout_marginBottom="@dimen/spacing_small"
					android:layout_weight="1"
					android:drawablePadding="@dimen/spacing_double"
					android:text="@string/show_acceleration"
					/>

			<Switch
					android:id="@+id/swShowAcceleration"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="top"
					android:layout_marginTop="@dimen/spacing_small"
					android:layout_marginEnd="@dimen/spacing_normal"
					android:layout_marginRight="@dimen/spacing_normal"
					android:layout_marginBottom="@dimen/spacing_small"
					/>
		</LinearLayout>

		<LinearLayout
				android:id="@+id/pnlOrientation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<TextView
					style="@style/Text.NormalLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/spacing_huge"
					android:layout_marginLeft="@dimen/spacing_huge"
					android:layout_marginTop="@dimen/spacing_small"
					android:layout_marginEnd="@dimen/spacing_normal"
					android:layout_marginRight="@dimen/spacing_normal"
					android:layout_marginBottom="@dimen/spacing_small"
					android:layout_weight="1"
					android:drawablePadding="@dimen/spacing_double"
					android:text="@string/show_orientation"
					/>

			<Switch
					android:id="@+id/swShowOrientation"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="top"
					android:layout_marginTop="@dimen/spacing_small"
					android:layout_marginEnd="@dimen/spacing_normal"
					android:layout_marginRight="@dimen/spacing_normal"
					android:layout_marginBottom="@dimen/spacing_small"
					/>
		</LinearLayout>

		<LinearLayout
				android:id="@+id/pnlAccuracy"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<TextView
					style="@style/Text.NormalLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/spacing_huge"
					android:layout_marginLeft="@dimen/spacing_huge"
					android:layout_marginTop="@dimen/spacing_small"
					android:layout_marginEnd="@dimen/spacing_normal"
					android:layout_marginRight="@dimen/spacing_normal"
					android:layout_marginBottom="@dimen/spacing_small"
					android:layout_weight="1"
					android:drawablePadding="@dimen/spacing_double"
					android:text="@string/show_accuracy"
					/>

			<Switch
					android:id="@+id/swShowAccuracy"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="top"
					android:layout_marginTop="@dimen/spacing_small"
					android:layout_marginEnd="@dimen/spacing_normal"
					android:layout_marginRight="@dimen/spacing_normal"
					android:layout_marginBottom="@dimen/spacing_small"
					/>
		</LinearLayout>

		<LinearLayout
				android:id="@+id/pnlMagnetic"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

			<TextView
					style="@style/Text.NormalLabel"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/spacing_huge"
					android:layout_marginLeft="@dimen/spacing_huge"
					android:layout_marginTop="@dimen/spacing_small"
					android:layout_marginEnd="@dimen/spacing_normal"
					android:layout_marginRight="@dimen/spacing_normal"
					android:layout_marginBottom="@dimen/spacing_small"
					android:layout_weight="1"
					android:drawablePadding="@dimen/spacing_double"
					android:text="@string/show_magnetic"
					/>

			<Switch
					android:id="@+id/swShowMagnetic"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="top"
					android:layout_marginTop="@dimen/spacing_small"
					android:layout_marginEnd="@dimen/spacing_normal"
					android:layout_marginRight="@dimen/spacing_normal"
					android:layout_marginBottom="@dimen/spacing_small"
					/>
		</LinearLayout>

		<TextView
				android:id="@+id/txtAbout"
				style="@style/Text.NormalLabel"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?android:selectableItemBackground"
				android:drawablePadding="@dimen/spacing_double"
				android:gravity="bottom|center"
				android:padding="@dimen/spacing_normal"
				android:text="@string/app_name"
				android:textSize="@dimen/text_xmedium"
				/>

	</LinearLayout>
</ScrollView>
